--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.79",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "rollup": "^4.16.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
   }
